
plugins {
    id 'java-library'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

repositories {
    jcenter()
}

dependencies {
    implementation ('org.apache.poi:poi-ooxml:5.0.0') {
        exclude group:'xml-apis', module:'xml-apis'
    }

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.8.1'
}

test {
    useJUnitPlatform()
}

sourceCompatibility = 17
targetCompatibility = 17

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

javafx {
    version = 17
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

mainClassName = 'xyz.hotchpotch.hogandiff.AppMain'

// MacOS向け.appバンドル用のパラメータ
def libBase = '../PlugIns/lib/'
def classPath = '' \
    + libBase + 'poi-5_0_0/poi-5.0.0.jar ' \
    + libBase + 'poi-5_0_0/poi-ooxml-5.0.0.jar ' \
    + libBase + 'poi-5_0_0/poi-ooxml-lite-5.0.0.jar ' \
    + libBase + 'poi-5_0_0/lib/commons-codec-1.15.jar ' \
    + libBase + 'poi-5_0_0/lib/commons-collections4-4.4.jar ' \
    + libBase + 'poi-5_0_0/lib/commons-math3-3.6.1.jar ' \
    + libBase + 'poi-5_0_0/lib/SparseBitSet-1.2.jar ' \
    + libBase + 'poi-5_0_0/ooxml-lib/commons-compress-1.20.jar' \
    + libBase + 'poi-5_0_0/ooxml-lib/xmlbeans-4.0.0.jar'

jar {
    manifest {
        attributes (
            "Main-Class": mainClassName,
            "Class-Path": classPath)
    }
}
